--- a/css/style.css
+++ b/css/style.css
@@ -81,20 +81,57 @@
 }
 
 
-/*-------------*/
-/* Backgrounds */
-/*-------------*/
+/*---------*/
+/* Buttons */
+/*---------*/
+
+.btn {
+    display: inline-block;
+    background-color: #ffffff;
+    color: var(--tertiary-color);
+    padding: 5px 10px;
+    border-radius: 2rem;
+}
+
+.btn-large {
+    padding: 7px 35px
+}
+
+
+/*--------*/
+/* Colors */
+/*--------*/
 
 .bg-primary {
     background-color: var(--primary-color);
+}
+
+.color-primary {
+    color: var(--primary-color);
+}
+
+.bg-secondary {
+    background-color: var(--secondary-color);
 }
 
 .bg-secondary-dark {
     background-color: var(--secondary-color-dark);
 }
 
+.color-secondary-dark {
+    color: var(--secondary-color-dark);
+}
+
 .bg-tertiary {
     background-color: var(--tertiary-color);
+}
+
+.color-white {
+    color: #ffffff;
+}
+
+.color-black {
+    color: var(--tertiary-color);
 }
 
 
@@ -107,18 +144,22 @@ a {
     color: unset;
 }
 
-
-
-/*---------*/
-/* Buttons */
-/*---------*/
-
-.btn {
-    display: inline-block;
-    background-color: #ffffff;
+p {
+    line-height: 25px;
     color: var(--tertiary-color);
-    padding: 5px 10px;
+}
+
+
+/*-------*/
+/* Cards */
+/*-------*/
+
+.card {
+    position: relative;
+    padding: 1.5rem 1rem;
+    height: 100%;
     border-radius: 2rem;
+    overflow: hidden;
 }
 
 
@@ -138,9 +179,46 @@ a {
 
 .lg-menu ul li {
     list-style: none;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
+.lg-menu ul li:last-child {
+    margin-right: 0px;
+}
+
+
+/*--------------*/
+/* Hero section */
+/*--------------*/
+
+.hero-card-title {
+    padding-bottom: 15px;
+}
+
+.hero .col-66 a {
+    margin-top: 1rem;
+}
+
+.hero .col-66 i {
+    padding-right: 10px;
+}
+
+.hero img {
+    width: 200px;
+    transform: translateY(2.5rem);
+}
+
+.hero .col-33 {
+    text-align: center;
+}
+
+.hero .col-33 i {
+    font-size: 4rem;
+}
+
+.hero .col-33 h3 {
+    padding: 1rem 0;
+}
 
 
 /*------------*/
