--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@
     align-items: center;
 }
 
+.bottom-align {
+    align-items: flex-end;
+}
+
 
 /*------------*/
 /* Basic grid */
@@ -54,6 +58,11 @@
     padding: .5rem 1rem;
     /* Debug */
     border: 1px dashed red;
+}
+
+.container-padding-large {
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
 
 .row {
@@ -126,6 +135,10 @@
     background-color: var(--tertiary-color);
 }
 
+.bg-white {
+    background-color: #ffffff;
+}
+
 .color-white {
     color: #ffffff;
 }
@@ -149,6 +162,14 @@ p {
     color: var(--tertiary-color);
 }
 
+h3 {
+    font-size: 25px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
 
 /*-------*/
 /* Cards */
@@ -158,6 +179,7 @@ p {
     position: relative;
     padding: 1.5rem 1rem;
     height: 100%;
+    width: 100%;
     border-radius: 2rem;
     overflow: hidden;
 }
@@ -216,8 +238,39 @@ p {
     font-size: 4rem;
 }
 
-.hero .col-33 h3 {
+.hero .col-33 h4 {
     padding: 1rem 0;
+}
+
+
+/*----------------------------*/
+/* Strategic planning section */
+/*----------------------------*/
+
+.strategic-planning .col img {
+    width: 90%;
+}
+
+.strategic-planning h3 {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+
+.strategic-planning .card {
+    align-self: flex-end;
+    width: 80%;
+    padding: 2rem;
+    text-align: center;
+}
+
+.strategic-planning .card h4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.strategic-planning .card p {
+    font-style: italic;
+    padding-bottom: 1rem;
 }
 
 
@@ -244,6 +297,11 @@ p {
         width: calc(576px - 2rem);
     }
 
+    .container-md-padding-default {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
     .col-md-full {
         flex-basis: calc(100% - 1rem);
     }
@@ -258,6 +316,10 @@ p {
 
     .md-menu {
         display: block;
+    }
+
+    .strategic-planning .card {
+        width: 100%;
     }
 }
 
