--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@
 /* General */
 /*---------*/
 
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 
 :root {
@@ -13,6 +16,7 @@
     --secondary-color: #B5DDFF;
     --secondary-color-dark: #0084FD;
     --tertiary-color: #333333;
+    --accent-color: #FDC15F;
 }
 
 /*------*/
@@ -21,6 +25,10 @@
 
 .flex {
     display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
 }
 
 .grow {
@@ -43,6 +51,10 @@
     align-items: flex-end;
 }
 
+.top-align {
+    align-items: flex-start;
+}
+
 
 /*------------*/
 /* Basic grid */
@@ -55,14 +67,17 @@
 .container {
     width: 964px;
     margin: 0 auto;
-    padding: .5rem 1rem;
-    /* Debug */
-    border: 1px dashed red;
+    padding: 0 1rem;
 }
 
 .container-padding-large {
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
+.container-padding-small {
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 .row {
@@ -73,21 +88,19 @@
 
 .col {
     flex-basis: 0;
-    /* Debug */
-    border: 1px dashed black;
 }
+
+.col-20 {
+    flex-basis: calc(100% / 5 - 1rem);
+    }
 
 .col-33 {
     flex-basis: calc(100% / 3 - 1rem);
-    /* Debug */
-    border: 1px dashed black;
-}
+    }
 
 .col-66 {
     flex-basis: calc((100% / 3) * 2 - 1rem);
-    /* Debug */
-    border: 1px dashed black;
-}
+    }
 
 
 /*---------*/
@@ -103,7 +116,11 @@
 }
 
 .btn-large {
-    padding: 7px 35px
+    padding: 7px 35px;
+}
+
+.btn-jumbo {
+    padding: 15px 60px;
 }
 
 
@@ -147,6 +164,10 @@
     color: var(--tertiary-color);
 }
 
+.color-accent {
+    color: var(--accent-color);
+}
+
 
 /*------------*/
 /* Typography */
@@ -162,12 +183,31 @@ p {
     color: var(--tertiary-color);
 }
 
+h1 {
+    font-size: 50px;
+    line-height: 60px;
+}
+
+h2 {
+    font-size: 35px;
+    line-height: 45px;
+}
+
 h3 {
     font-size: 25px;
+    line-height: 35px;
 }
 
 h4 {
     font-size: 20px;
+    line-height: 30px;
+}
+
+h6 {
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 1rem;
+    font-weight: 300;
 }
 
 
@@ -189,6 +229,10 @@ h4 {
 /*----------------*/
 /* Navigation bar */
 /*----------------*/
+
+header nav .col-33 img {
+    padding: 1rem 0;
+}
 
 .lg-menu,
 .md-menu {
@@ -213,8 +257,9 @@ h4 {
 /* Hero section */
 /*--------------*/
 
-.hero-card-title {
-    padding-bottom: 15px;
+.hero h4,
+.hero .col-33 i {
+    padding-bottom: 1rem;
 }
 
 .hero .col-66 a {
@@ -238,10 +283,6 @@ h4 {
     font-size: 4rem;
 }
 
-.hero .col-33 h4 {
-    padding: 1rem 0;
-}
-
 
 /*----------------------------*/
 /* Strategic planning section */
@@ -251,9 +292,14 @@ h4 {
     width: 90%;
 }
 
-.strategic-planning h3 {
-    padding-top: 3rem;
-    padding-bottom: 2rem;
+.strategic-planning .col h3 {
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+}
+
+.strategic-planning .col h4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .strategic-planning .card {
@@ -263,14 +309,146 @@ h4 {
     text-align: center;
 }
 
-.strategic-planning .card h4 {
+.strategic-planning .card p {
+    font-style: italic;
+    padding-bottom: 1rem;
+}
+
+
+/*----------------------*/
+/* Testimonials section */
+/*----------------------*/
+
+.testimonials h2,
+.testimonials p {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
-.strategic-planning .card p {
-    font-style: italic;
+.testimonials-info {
+    text-align: center;
+}
+
+.testimonials .card {
+    margin: 1rem 0;
+}
+
+.round-photo {
+    width: 100%;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+}
+
+.testimonial-quote {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.testimonials .card .col h6 {
+    padding-top: 1.5rem;
+}
+
+#testimonial-1 {
+    background-image: url('../img/testimonial1.jpg');
+}
+
+#testimonial-2 {
+    background-image: url('../img/testimonial2.jpg');
+}
+
+#testimonial-3 {
+    background-image: url('../img/testimonial3.jpg');
+}
+
+
+/*------------------*/
+/* Benefits section */
+/*------------------*/
+
+.benefits h2 {
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.benefits .card h1,
+.benefits .card p {
+    padding: 1rem 0;
+}
+
+
+/*------------------*/
+/* About Us section */
+/*------------------*/
+
+.about-us {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+.about-us .col-66 p {
+    padding-top: 2rem;
+}
+
+#about-us-photo {
+    background-image: url('../img/about.jpg');
+}
+
+.about-us .col-33 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.about-us .col-33 h3 {
+    padding: 1rem 0;
+}
+
+.about-us .col-33 .round-photo {
+    position: relative;
+}
+
+.about-us .col-33 .fa-quote-left {
+    font-size: 70px;
+    position: absolute;
+    right: 0;
+}
+
+
+/*---------------------*/
+/* Get Started section */
+/*---------------------*/
+
+.get-started {
+    text-align: center;
+}
+
+.get-started h2,
+.get-started a {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.get-started h1 {
     padding-bottom: 1rem;
+}
+
+.get-started a {
+    text-decoration: underline;
+}
+
+
+/*----------------*/
+/* Footer section */
+/*----------------*/
+
+footer p {
+    padding: 2rem 0;
+}
+
+footer a {
+    text-decoration: underline;
+    color: var(--primary-color);
 }
 
 
@@ -321,6 +499,10 @@ h4 {
     .strategic-planning .card {
         width: 100%;
     }
+
+    .h3-md-big {
+        font-size: 50px;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -328,7 +510,17 @@ h4 {
         width: calc(100% - 2rem);
     }
 
+    .container-sm-padding-default {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
     .col-sm-full {
         flex-basis: 100%;
+    }
+
+    .testimonials .card .col-20 {
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
